--- a/遥控器/Objects/Project.build_log.htm
+++ b/遥控器/Objects/Project.build_log.htm
@@ -27,9 +27,10 @@ Project File Date:  04/16/2023
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\Pigeon-feeder\Keil\ARM\ARMCC\Bin'
 Build target 'Target 1'
+compiling State2.c...
 compiling main.c...
 linking...
-Program Size: Code=20104 RO-data=2380 RW-data=116 ZI-data=1644  
+Program Size: Code=20108 RO-data=2380 RW-data=100 ZI-data=1668  
 ".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
