--- a/鸽子喂料机/Objects/Project.build_log.htm
+++ b/鸽子喂料机/Objects/Project.build_log.htm
@@ -27,11 +27,17 @@ Project File Date:  04/19/2023
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\Pigeon-feeder\Keil\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling State3.c...
+compiling Feed.c...
+compiling main.c...
+User\main.c(122): warning:  #223-D: function "Feeding_GetRemoteAutoTimes" declared implicitly
+  			Get_FeedTime(&feeder1, &feeder2, &feeder3, Feeding_GetRemoteAutoTimes());
+User\main.c(243): warning:  #223-D: function "Feeding_GetRemoteAutoTimes" declared implicitly
+  				Get_FeedTime(&feeder1, &feeder2, &feeder3, Feeding_GetRemoteAutoTimes());
+User\main.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=22746 RO-data=2342 RW-data=180 ZI-data=1676  
+Program Size: Code=22890 RO-data=2342 RW-data=140 ZI-data=1732  
 FromELF: creating hex file...
-".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
+".\Objects\Project.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -45,7 +51,7 @@ Package Vendor: Keil
   C:\Pigeon-feeder\Keil\ARM\PACK\Keil\STM32F1xx_DFP\2.4.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
