--- a/鸽子喂料机/Objects/Project.build_log.htm
+++ b/鸽子喂料机/Objects/Project.build_log.htm
@@ -27,9 +27,10 @@ Project File Date:  04/23/2023
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Study\Keil5\ARM\ARMCC\Bin'
 Build target 'Target 1'
+compiling TrackingLine.c...
 compiling main.c...
 linking...
-Program Size: Code=22942 RO-data=2342 RW-data=140 ZI-data=1732  
+Program Size: Code=22738 RO-data=2342 RW-data=140 ZI-data=1732  
 FromELF: creating hex file...
 ".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
 
