--- a/鸽子喂料机/Objects/Project.build_log.htm
+++ b/鸽子喂料机/Objects/Project.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  04/23/2023
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\Pigeon-feeder\Keil\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling TrackingLine.c...
+compiling Relay.c...
 linking...
-Program Size: Code=24346 RO-data=2342 RW-data=144 ZI-data=1728  
+Program Size: Code=24354 RO-data=2342 RW-data=144 ZI-data=1728  
 FromELF: creating hex file...
 ".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
 
@@ -45,7 +45,7 @@ Package Vendor: Keil
   C:\Pigeon-feeder\Keil\ARM\PACK\Keil\STM32F1xx_DFP\2.4.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
