--- a/鸽子喂料机/Objects/Project.build_log.htm
+++ b/鸽子喂料机/Objects/Project.build_log.htm
@@ -26,8 +26,50 @@ Project File Date:  04/23/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\Pigeon-feeder\Keil\ARM\ARMCC\Bin'
-Build target 'Target 1'
+Rebuild target 'Target 1'
+assembling startup_stm32f10x_md.s...
+compiling core_cm3.c...
+compiling stm32f10x_bkp.c...
+compiling stm32f10x_dbgmcu.c...
+compiling stm32f10x_adc.c...
+compiling stm32f10x_cec.c...
+compiling misc.c...
+compiling system_stm32f10x.c...
+compiling stm32f10x_dac.c...
+compiling stm32f10x_can.c...
+compiling stm32f10x_crc.c...
+compiling stm32f10x_dma.c...
+compiling stm32f10x_exti.c...
+compiling stm32f10x_gpio.c...
+compiling stm32f10x_rtc.c...
+compiling stm32f10x_flash.c...
+compiling stm32f10x_fsmc.c...
+compiling stm32f10x_iwdg.c...
+compiling stm32f10x_pwr.c...
+compiling stm32f10x_i2c.c...
+compiling stm32f10x_spi.c...
+compiling stm32f10x_rcc.c...
+compiling stm32f10x_sdio.c...
+compiling stm32f10x_tim.c...
+compiling Delay.c...
+compiling stm32f10x_wwdg.c...
+compiling TIM2.c...
+compiling TIM4.c...
+compiling stm32f10x_usart.c...
 compiling Relay.c...
+compiling LED.c...
+compiling USART.c...
+compiling NRF24L01.c...
+compiling OLED.c...
+compiling TSDA.c...
+compiling bsp_usart.c...
+compiling stm32f10x_it.c...
+compiling Robot.c...
+compiling Hcsr04.c...
+compiling State3.c...
+compiling Feed.c...
+compiling main.c...
+compiling TrackingLine.c...
 linking...
 Program Size: Code=24354 RO-data=2342 RW-data=144 ZI-data=1728  
 FromELF: creating hex file...
@@ -45,7 +87,7 @@ Package Vendor: Keil
   C:\Pigeon-feeder\Keil\ARM\PACK\Keil\STM32F1xx_DFP\2.4.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
